--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,17 @@
 [build-system]
-    requires = [
-        "setuptools>=80.0.0",
-        "wheel"
-    ]
-    build-backend = "setuptools.build_meta"
+requires = ["setuptools>=80", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "package"
+version = "0.0.2"
+description = "A Python package template"
+readme = "README.md"
+requires-python = ">=3.10"
+dependencies = []
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
