--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, windows-11-arm, macos-latest, macos-15-intel, macos-14]
 
     steps:
       - name: Checkout repository
@@ -22,6 +22,8 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v3.3.1
         env:
+          CIBW_ALLOW_PURE_PYTHON: "1"
+          
           # Python versions to build
           CIBW_BUILD: "cp310-* cp311-* cp312-*"
 
