--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -23,12 +23,12 @@ jobs:
         uses: pypa/cibuildwheel@v3.3.1
         env:
           CIBW_ALLOW_PURE_PYTHON: "1"
-          
+
           # Python versions to build
-          CIBW_BUILD: "cp310-* cp311-* cp312-*"
+#          CIBW_BUILD: "cp310-* cp311-* cp312-*"
 
           # Skip PyPy and musllinux (Alpine)
-          CIBW_SKIP: "pp* *-musllinux_*"
+#          CIBW_SKIP: "pp* *-musllinux_*"
 
           # Simple sanity test after each wheel is built
           CIBW_TEST_COMMAND: >
