--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,4 +1,4 @@
-name: Build wheels
+name: Build wheel
 
 on:
   push:
@@ -6,39 +6,29 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_wheels:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, windows-11-arm, macos-latest, macos-15-intel, macos-14]
+  build_wheel:
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v3.3.1
-        env:
-          CIBW_ALLOW_PURE_PYTHON: "1"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
-          # Python versions to build
-#          CIBW_BUILD: "cp310-* cp311-* cp312-*"
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
 
-          # Skip PyPy and musllinux (Alpine)
-#          CIBW_SKIP: "pp* *-musllinux_*"
+      - name: Build wheel
+        run: |
+          python -m build --wheel
 
-          # Simple sanity test after each wheel is built
-          CIBW_TEST_COMMAND: >
-            python - <<'EOF'
-            import yourpkg
-            print("import ok")
-            EOF
-
-      - name: Upload wheels
+      - name: Upload wheel
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ matrix.os }}
-          path: wheelhouse/*.whl
+          name: wheel
+          path: dist/*.whl
