--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -25,7 +25,8 @@ jobs:
 
       - name: Build wheel
         run: |
-          python -m build --wheel
+          chmod +x package.sh
+          ./package.sh -n
 
       - name: Upload wheel
         uses: actions/upload-artifact@v4
